TP-1733 fix login button visibility bug

--- a/public/themes/custom/palvelumanuaali/components/03-organisms/site/site-header/_site-header.scss
+++ b/public/themes/custom/palvelumanuaali/components/03-organisms/site/site-header/_site-header.scss
@@ -27,6 +27,21 @@ body:not(.admin-toolbar-enabled) {
 }
 
 
+.mobile-user-menu {
+  display: none;
+}
+
+.lgin-on {
+  .header__primary {
+    .mobile-user-menu {
+      display: block;
+      margin-top: $space;
+        @include xl { display: none;}
+
+    }
+  }
+}
+
 .slide-in-menu {
   margin-top: $space-two-and-half;
   display: block;
